draft 3 fixed criteria

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
     <title>Doreen Otieno's Portfolio</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <meta charset="utf-8">
@@ -11,88 +10,87 @@
     <meta name="author" content= "Doreen Otieno">
     <link rel="stylesheet" href="styles/main.css" type="text/css">
     
-=======
-<title>Doreen Otieno's portfolio</title>
->>>>>>> ab5f644171d3d4ac0945cefa8cd21405d2e1219f
 </head>
 <body>
-    <div class="flex-container">
+<div class="flex-container">
     <div class="navbar">
         <div class="header">
-    <header id="header">
-        <img class="logo.img" src="images/Website-Logo.jpg" width="200 px" height="200 px">
-        <p1>Hi my name is...</p1>
-        <h1>Doreen Otieno</h1>
-    </header>
-    </div>
+            <header id="header">
+            <img class="logo.img" src="images/Website-Logo.jpg" width="200 px" height="200 px">
+            <p1>Hi my name is...</p1>
+            <h1>Doreen Otieno</h1>
+            </header>
+         </div>
     <div class="navigation">
-    <nav class="nav">
-        <a href="#home">Home</a>
-        <a href="#my-description">About me</a>
-        <a href="#my-timeline">Timeline</a>
-        <a href="#coding-projects">Projects</a>
-        <a href="#contacts-header" ><!--style="float:right" class="active"-->Social Media</a> 
-    </nav> 
+         <nav class="nav">
+             <a href="#home">Home</a>
+             <a href="#my-description">About me</a>
+            <a href="#my-timeline">Timeline</a>
+            <a href="#coding-projects">Projects</a>
+            <a href="#contacts-header" >Social Media</a> 
+        </nav> 
     </div> 
     <!-- end of navigation div -->
    </div>
    <!-- end of navbar div -->
-<div class="homepage">
-<main id="home" class="Introduction">
-    <p2>Let me introduce myself...</p2>
-<img class="profile.img" src="images/headshot.jpg" width="500" height="600" alt="Profile headshot of Doreen" >
-</main>
-<div id="my-description">
-<section class="about-me">
-    Hi, My name is Doreen and I am currently learning how to be a front end developer. I am currently learning:
-    HTML, CSS and Java Script as well as React.
-    I currently work in hospitality with experience in healthcare. I am looking to change careers into tech.
-</section>
-</div>
+    <div class="homepage">
+        <main id="home" class="Introduction">
+            <p2>Let me introduce myself...</p2>
+            <img class="profile.img" src="images/headshot.jpg" width="250" height="300" alt="Profile headshot of Doreen" >
+        </main>
+    <div id="my-description">
+        <section class="about-me">
+        Hi, My name is Doreen and I am currently learning how to be a front end developer. 
+        <br>
+        I am currently learning:
+        HTML, CSS and Java Script as well as React.
+        <br>
+        I currently work in hospitality with experience in healthcare. I am looking to change careers into tech.
+        </section>
+    </div>
 <!-- end of my descrioption div -->
-<div id="my-timeline" class="timeline-container">
-    <ul class="timeline">
-        <li class="active">Student Nurse</li>
-        <li> Hospitality</li>
-        <li>Furlough</li>
-        <li> Black CodHer Bootcamp</li>
-    </ul>
-</div>
-<div id="coding-projects">
-<h2 id="project-header">Projects</h2>
-<ul class="projects">
-    <li>JavaScript group Project</li>
-    <li>React Project</li>
-    <li>Node Project</li>
-    <li>MongoDB Project</li>
-<li>Personal Project</li>
-</ul>
-</div>
+    <div id="my-timeline" class="timeline-container">
+        <h2>My timeline</h2>
+            <ul class="timeline">
+                 <li class="active">Student Nurse</li>
+                <li> Hospitality</li>
+                 <li>Furlough</li>
+                 <li> Black CodHer Bootcamp</li>
+             </ul>
+    </div>
+    <div id="coding-projects">
+        <h2 id="project-header">Projects</h2>
+             <ul class="projects">
+                 <li>JavaScript group Project</li>
+                 <li>React Project</li>
+                 <li>Node Project</li>
+                 <li>MongoDB Project</li>
+                 <li>Personal Project</li>
+             </ul>
+    </div>
 <!-- end of coding projects div -->
 </div>
-<!-- end of main page div -->
+<!-- end of main page div --> 
 <div class="my-footer">
-<footer id="socials-footer">
-    <h3 id="contacts-header">Contact me</h3>
- <ul class="social-media" > 
-     <a href="https://twitter.com/Doreen_codes">
-        <img class="social-icons twitter-icon" src="images/twitter logo_icon.png" alt="twitter icon" width="50px" height="50px"></a> 
-        <li>Twitter</li>
-    <a href="https://github.com/doreen-o">
-        <img class="social-icons github-icon" src="images/github_icon.png" alt="github icon" width="50px" height="50px"></a>
-        <li>GitHub</li>
-    <a href="mailto:doreenotieno21@gmail.com">
-        <img class="social-icons gmail-icon" src="images/brown_gmail_icon-2.png" alt="email icon" width="50px" height="50px"></a>
-        <li>Email</li>
-    <a href= linked in account>
-    <img class="social-icons linkedin-icon" src="images/linkedin_icon.png" alt="linkedin icon" width="50px" height="50px"></a>
-    <li>LinkedIn</li>
-</ul>
-
-</footer>
+    <footer id="socials-footer">
+        <h3 id="contacts-header">Contact me</h3>
+            <ul class="social-media" > 
+                <a href="https://twitter.com/Doreen_codes">
+                    <img class="social-icons twitter-icon" src="images/twitter logo_icon.png" alt="twitter icon" width="50px" height="50px"></a> 
+                    <li>Twitter</li>
+                 <a href="https://github.com/doreen-o">
+                    <img class="social-icons github-icon" src="images/github_icon.png" alt="github icon" width="50px" height="50px"></a>
+                     <li>GitHub</li>
+                <a href="mailto:doreenotieno21@gmail.com">
+                    <img class="social-icons gmail-icon" src="images/brown_gmail_icon-2.png" alt="email icon" width="50px" height="50px"></a>
+                    <li>Email</li>
+                <a href= linked in account>
+                    <img class="social-icons linkedin-icon" src="images/linkedin_icon.png" alt="linkedin icon" width="50px" height="50px"></a>
+                     <li>LinkedIn</li>
+            </ul>  
+    </footer>
 </div>
-   </div>
+</div>
    <!-- end of container div  -->
 </body>
-
 </html>
