--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header">
             <header id="header">
             <img class="logo.img" src="images/Website-Logo.jpg" width="200 px" height="200 px">
-            <p1>Hi my name is...</p1>
+            <p>Hi my name is...</p>
             <h1>Doreen Otieno</h1>
             </header>
          </div>
@@ -35,7 +35,7 @@
    <!-- end of navbar div -->
     <div class="homepage">
         <main id="home" class="Introduction">
-            <p2>Let me introduce myself...</p2>
+            <p>Let me introduce myself...</p>
             <img class="profile.img" src="images/headshot.jpg" width="250" height="300" alt="Profile headshot of Doreen" >
         </main>
     <div id="my-description">
