--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
     <div class="navbar">
         <div class="header">
             <header id="header">
-            <img class="logo.img" src="images/Website-Logo.jpg" width="200 px" height="200 px">
-            <p>Hi my name is...</p>
-            <h1>Doreen Otieno</h1>
+            <img class="logo-img" src="images/Website-Logo.jpg" width="600px" height="600px">
             </header>
          </div>
     <div class="navigation">
          <nav class="nav">
-             <a href="#home">Home</a>
-             <a href="#my-description">About me</a>
+             <a href="#header">Home</a>
+             <a href="#introduce-myself">About me</a>
             <a href="#my-timeline">Timeline</a>
             <a href="#coding-projects">Projects</a>
             <a href="#contacts-header" >Social Media</a> 
@@ -33,39 +31,68 @@
     <!-- end of navigation div -->
    </div>
    <!-- end of navbar div -->
-    <div class="homepage">
-        <main id="home" class="Introduction">
+<div class="homepage">
+        <main id="introduce-myself" class="Introduction">
             <p>Let me introduce myself...</p>
-            <img class="profile.img" src="images/headshot.jpg" width="250" height="300" alt="Profile headshot of Doreen" >
+            <p>Hi my name is...</p>
+            <h1>Doreen Otieno</h1>
+           <img class="profile-img" src="images/headshot.jpg" width="250" height="300" alt="Profile headshot of Doreen" >
         </main>
     <div id="my-description">
         <section class="about-me">
-        Hi, My name is Doreen and I am currently learning how to be a front end developer. 
+        I am currently enrolled on the Black CodHer Front End Bootcamp. 
         <br>
-        I am currently learning:
-        HTML, CSS and Java Script as well as React.
+       I started coding whilst I was furloughed from my full time job during lockdown. I enjoyed the problem solving and analytical aspects of coding.
         <br>
-        I currently work in hospitality with experience in healthcare. I am looking to change careers into tech.
+        This led to me researching careers in tech and i found an interest in UX and UI.
+        <br>
+        I currently work in hospitality with experience in healthcare. I am currently looking for a job as a Junior Front End Developer.
         </section>
+
+    
+    <div id="langauges-and-technologies">
+        <h2>My Languages & technologies</h2>
+        <ul class="languages">
+            <img class="lang-icons" id="html-icon" src="images/html.png" alt="HTML 5 Icon" href="https://www.flaticon.com/free-icons/html5">
+            <li></li>
+            <img class="lang-icons" id="css-icon" src="images/css.png" alt="Css Icon created by edt.im - Flaticon" href="https://www.flaticon.com/free-icons/css">
+            <li></li>
+            <img class="lang-icons" id="javascript-icon" src="images/java-script.png" alt="Javascript Icon">
+            <li></li>
+            <img class="lang-icons" id="react-icon" src="images/react.png" alt="React Icon" href="https://www.flaticon.com/free-icons/atom">
+            <li></li>
+        </ul>
     </div>
-<!-- end of my descrioption div -->
+<!-- end of my langauges/technologies div -->
+</div>
+<!-- end of my description div -->
     <div id="my-timeline" class="timeline-container">
         <h2>My timeline</h2>
             <ul class="timeline">
-                 <li class="active">Student Nurse</li>
-                <li> Hospitality</li>
-                 <li>Furlough</li>
-                 <li> Black CodHer Bootcamp</li>
+                <li  data-title="Student Nurse" data-text="I worked as a Student Nurse during my time at the University of Leeds, gaining experience in working in healthcare and communicating with a variety of people." ></li>
+                <li  data-title="Hospitality" data-text=" I started working full time in Hospitality, supervising a team as well as training new members of staff."></li>
+                 <li  data-title="Furlough" data-text="I got furloughed from my full time job during lockdown and started coding as a way to feel mentally stimulated."></li>
+                 <li data-title="Black CodHer" data-text="I enrolled in the Front end Developer Bootcamp and have worked on a variety of projects and assignments."></li>
              </ul>
     </div>
     <div id="coding-projects">
         <h2 id="project-header">Projects</h2>
              <ul class="projects">
-                 <li>JavaScript group Project</li>
-                 <li>React Project</li>
-                 <li>Node Project</li>
-                 <li>MongoDB Project</li>
-                 <li>Personal Project</li>
+                 <!-- <a href="javascript link"> -->
+                 <img class="project-icons" id="javascript-icon" src="images/java-script.png" alt="Javascript Icon"> <!--</a> -->
+                 <li></li>
+                 <!-- <a href="react link"></a> -->                 
+                 <img class="project-icons" id="react-icon" src="images/react.png" alt="React Icon"> <!--</a> -->
+                 <li></li>
+                 <!-- <a href="node link"></a> -->
+                 <img class="project-icons" id="project1-icon" src="images/coming-soon.png" alt="Node Icon"> <!--</a> -->
+                 <li></li>
+                 <!-- <a href="mongoDB link"></a> -->
+                 <img class="project-icons" id="project2-icon" src="images/coming-soon.png" alt="MongoDB Icon"> <!--</a> -->
+                 <li></li>
+                 <!-- <a href="project link"></a> -->
+                 <img class="project-icons" id="project3-icon" src="images/coming-soon.png" alt="Javascript Icon" width="50px" height="50px"> <!--</a> -->
+                 <li></li>
              </ul>
     </div>
 <!-- end of coding projects div -->
@@ -76,17 +103,17 @@
         <h3 id="contacts-header">Contact me</h3>
             <ul class="social-media" > 
                 <a href="https://twitter.com/Doreen_codes">
-                    <img class="social-icons twitter-icon" src="images/twitter logo_icon.png" alt="twitter icon" width="50px" height="50px"></a> 
-                    <li>Twitter</li>
+                    <img class="social-icons", id="twitter-icon" src="images/twitter logo_icon.png" alt="twitter icon" ></a> 
+                    <li></li>
                  <a href="https://github.com/doreen-o">
-                    <img class="social-icons github-icon" src="images/github_icon.png" alt="github icon" width="50px" height="50px"></a>
-                     <li>GitHub</li>
+                    <img class="social-icons" id="github-icon" src="images/github_icon.png" alt="github icon" ></a>
+                     <li></li>
                 <a href="mailto:doreenotieno21@gmail.com">
-                    <img class="social-icons gmail-icon" src="images/brown_gmail_icon-2.png" alt="email icon" width="50px" height="50px"></a>
-                    <li>Email</li>
-                <a href= linked in account>
-                    <img class="social-icons linkedin-icon" src="images/linkedin_icon.png" alt="linkedin icon" width="50px" height="50px"></a>
-                     <li>LinkedIn</li>
+                    <img class="social-icons" id="gmail-icon" src="images/brown_gmail_icon-2.png" alt="email icon" ></a>
+                    <li></li>
+                <a href="https://www.linkedin.com/in/doreen-o-2703901b0/">
+                    <img class="social-icons" id="linkedin-icon" src="images/linkedin_icon.png" alt="linkedin icon" ></a>
+                     <li></li>
             </ul>  
     </footer>
 </div>
